testsuite/tests/patsyn/should_fail/T14114.stderr
T14114.hs:4:22: error: [GHC-10498]
    • Conflicting definitions for ‘a’
    • In a pattern synonym declaration
  |
4 | pattern Foo1 a <- (a,a)
  |                      ^
  |
4 | pattern Foo1 a <- (a,a)
  |                    ^

T14114.hs:5:22: error: [GHC-10498]
    • Conflicting definitions for ‘a’
    • In a pattern synonym declaration
  |
5 | pattern Foo2 a  = (a,a)
  |                      ^
  |
5 | pattern Foo2 a  = (a,a)
  |                    ^

T14114.hs:6:22: error: [GHC-10498]
    • Conflicting definitions for ‘a’
    • In a pattern synonym declaration
  |
6 | pattern Foo3 a <- (a,a) where
  |                      ^
  |
6 | pattern Foo3 a <- (a,a) where
  |                    ^

